# chatopus

./: .gitignore  .gitmodules  eslint.config.js  index.html  package.json  pnpm-lock.yaml  runtimed.db  tailwind.config.js  tsconfig.json  vite.config.ts
draft/: App.tsx  index.css
draft/components/: ChatContainer.tsx  ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  SidebarNavigation.tsx  ThemeToggle.tsx  TrashContent.tsx  sidebar-09.tsx
draft/components/ui/: dropdown-menu.tsx  sidebar.tsx
src/: App.css  App.tsx  ThemeContext.tsx  backup.jsx  globals.css  main.tsx  store.ts  types.tsx
src-tauri/: Cargo.toml  chatopus.db  runtimed.db  tauri.conf.json
src-tauri/.sqlx/: query-076cc1d95018fe97c096fc7af8990aa11157f25b7a566968ed6668ff27ab15c3.json  query-1c2dd849615ff90df11188cc753ceeb81de37f6d58ba67bae5a7273a593469a4.json  query-1e2c355a0cd387cf7c2c0aaf3e9f0520448b025c6f48b28ebef1885ed082c032.json  query-2152b796064e4216d72e52ff2e7f2292d9a33eb8c8e2185239bbfd1245afdedf.json  query-33789fdcc39fab253e8c643f78925dc4abd326884ac8377b9c380cd7a518c519.json  query-3b3e4954c01b33cdce14df333fccd3839494caa5be9b736bad00a3d1c36a3b7f.json  query-3be8d888b33f1c31d97abc2c9311a092d20f7b24c4b8876bc4a77bd1e0a09465.json  query-50c18a745ff26829af8686c0be6dc34dda080e6ab0e521c07917e2454445bbee.json  query-52db5402202fbde1495fed428d40784df4902f1771ecb198eb8739ed6b30dea8.json  query-5bd93bb6cfb8d2f2fb0ccdcb560026c08fa68b954355c9f0648fb26af8cf3f2c.json  query-608a8346ff1df48d8d2cbffaa4fc78141aef158ba7aadbc79bcd82c78019f77d.json  query-97706135ff77258bd8b52a8682cb422d40f21c03c0dcbb6651d5b729f7014f63.json  query-b31191f3bcffad365b247a0736899f79b811c33110374be0deb3182f5a0d68a2.json  query-c4b0258f62bc9d8de2fd63cff4d0ab920104b3a284290212b1ddc3b79f6102af.json  query-d4441a6bba428d7ceac8b0ae3123c3a3b73aeed8006a55321ffb588978bc5996.json  query-d5f6dd9400dd5bb7d29530fea67226a501662baaaa2fab7f570e4a67e4abe448.json  query-f2a66a5ce8f7ecd92f9b4610a944031dd999c1a7395e9bb77e2017c4e3a0e09b.json
src-tauri/migrations/: 20240318000000_create_chat_tables.sql
src-tauri/src/: chat.rs  config.rs  daemon.rs  jupyter.rs  lib.rs  main.rs  routes.rs
src-tauri/src/apimodels/: anthropic.rs  mod.rs  provider.rs
src-tauri/src/database/: chat.rs
src-tauri/src/migrations/: migrate.rs  mod.rs
src/components/: APISettings.tsx  ChatContainer.tsx  ChatHistory.tsx  ChatInput.tsx  ChatInputOther.tsx  ChatMessage.tsx  Chatbox.tsx  CodeBlock.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  MessageBlock.tsx  MessageBlockOther.tsx  MessageContent.tsx  ModelSelector.tsx  ModelSettings.tsx  ReactionButton.tsx  SelectTextButton.tsx  Settings.tsx  SidebarNavigation.tsx  ThemeToggle.tsx  TrashContent.tsx  UserAvatar.tsx  checkbox.tsx  sidebar-09.tsx
src/components/chat/: ChatContainer.tsx  CodeBlock.tsx  CopyButton.tsx  MessageBlock.tsx  MessageContent.tsx  UserAvatar.tsx  types.ts  useChat.ts  utils.ts
src/components/ui/: sidebar.tsx
src/contexts/: ModelContext.tsx
