[package]
name = "chatopus"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chatopus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-log = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "^0.12", features = ["json"] }
parking_lot = "*"
futures-util = "0.3.31"
runtimelib = { version = "0.24.0", features = ["tokio-runtime"] }
jupyter-protocol = "0.5.0"
#runtimed = {  path = "../runtimed/runtimed" }
tokio = "1.41"
anyhow = "1.0.93"
#tabled = "0.16.0"
tauri-plugin-localhost = "2.0.1"
tauri-plugin-store = "2.1.0"
tauri-plugin-sql = {version = "2.0.2", features = ["sqlite"] }
uuid = { version = "1.11.0", features = ["v4"] }


#[dependencies.tauri-plugin-sql]
#features = ["sqlite"] # or "postgres", or "mysql"
#version = "2.0.0-rc"

