[package]
name = "chatopus"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "chatopus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-log = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "^0.12", features = ["json"] }
parking_lot = "*"
futures-util = "0.3.31"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0.94"
tauri-plugin-localhost = "2.2.0"
tauri-plugin-store = "2.2.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
async-trait = "0.1.83"
ulid = { version = "1.1.3" }
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.22.1"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
jupyter-protocol = "0.5.0"
runtimelib = { version = "0.24.0", features = ["tokio-runtime"] }
uuid = "1.11.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
